create initial functionality to save into database according to our requirement

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: almuhajirin_backend-fastapi
+    image: kursil_demo-fastapi
     ports:
       - "8000:8000"
     volumes:
