--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,79 @@
+aiohappyeyeballs==2.3.4
+aiohttp==3.10.0
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
+attrs==24.1.0
+beautifulsoup4==4.12.3
 certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
+colorama==0.4.6
+dataclasses-json==0.6.7
+deep-translator==1.11.4
+distro==1.9.0
 dnspython==2.6.1
 email_validator==2.2.0
+faiss-cpu==1.8.0.post1
 fastapi==0.111.1
 fastapi-cli==0.0.4
+frozenlist==1.4.1
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.2.12
+langchain-community==0.2.11
+langchain-core==0.2.28
+langchain-openai==0.1.20
+langchain-text-splitters==0.2.2
+langsmith==0.1.96
+lxml==5.2.2
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.21.3
 mdurl==0.1.2
+motor==3.5.1
+multidict==6.0.5
+mypy-extensions==1.0.0
+numpy==1.26.4
+openai==1.37.1
+orjson==3.10.6
+packaging==24.1
+pillow==10.4.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+pymongo==4.8.0
+python-docx==1.1.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
+python-pptx==1.0.0
 PyYAML==6.0.1
+regex==2024.7.24
+requests==2.32.3
 rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
+soupsieve==2.5
 SQLAlchemy==2.0.31
+sse-starlette==2.1.3
 starlette==0.37.2
+tenacity==8.5.0
+tiktoken==0.7.0
+tqdm==4.66.4
 typer==0.12.3
+typing-inspect==0.9.0
 typing_extensions==4.12.2
+urllib3==2.2.2
 uvicorn==0.30.3
-
 watchfiles==0.22.0
 websockets==12.0
+XlsxWriter==3.2.0
+yarl==1.9.4
