--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,12 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==24.1.0
+awscli==1.33.35
 beautifulsoup4==4.12.3
+boto3==1.34.153
+botocore==1.34.153
 certifi==2024.7.4
+chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -13,18 +17,25 @@ dataclasses-json==0.6.7
 deep-translator==1.11.4
 distro==1.9.0
 dnspython==2.6.1
+docutils==0.16
 email_validator==2.2.0
 faiss-cpu==1.8.0.post1
 fastapi==0.111.1
 fastapi-cli==0.0.4
 frozenlist==1.4.1
+googletrans-py==4.0.0
 greenlet==3.0.3
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+hstspreload==2024.8.1
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
+hyperframe==6.0.1
 idna==3.7
 Jinja2==3.1.4
+jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.2.12
@@ -47,10 +58,12 @@ openai==1.37.1
 orjson==3.10.6
 packaging==24.1
 pillow==10.4.0
+pyasn1==0.6.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
 pymongo==4.8.0
+python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
@@ -58,8 +71,12 @@ python-pptx==1.0.0
 PyYAML==6.0.1
 regex==2024.7.24
 requests==2.32.3
+rfc3986==1.5.0
 rich==13.7.1
+rsa==4.7.2
+s3transfer==0.10.2
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.31
@@ -73,6 +90,7 @@ typing-inspect==0.9.0
 typing_extensions==4.12.2
 urllib3==2.2.2
 uvicorn==0.30.3
+uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
 XlsxWriter==3.2.0
